--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "i18next-http-backend": "^3.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-helmet-async": "^2.0.5",
     "react-i18next": "^16.0.1",
     "react-router-dom": "^7.9.4"
   },
